# hello-cpp

./: CMakeLists.txt  README.md  config.json
.github/workflows/: build.yml  release.yml
include/: clipboardListener.h  cmdOptions.h  commandRunner.h  config.h  cookie.h  cookieManager.h  downloader.h  fileManager.h  job.h  jobManager.h  link.h  logger.h  parser.h  source.h
src/: clipboardListener.cpp  cmdOptions.cpp  commandRunner.cpp  config.cpp  cookie.cpp  cookieManager.cpp  downloader.cpp  fileManager.cpp  jobManager.cpp  logger.cpp  main.cpp  parser.cpp  source.cpp
